<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="toast_message">Here is more information</string>
    <string name="snackbarText">Undo</string>
    <string name="lookGui">Look at my GUI</string>
    <string name="checkOut">Check this out!</string>
    <string name="clickHere">Click here</string>
    <string name="switchControl">Switch on/off</string>
    <string name="typeHere">Type here</string>
    <string name="undo">Undo</string>
    <string name="email_text">Enter your email address:</string>
    <string name="typeEmail">Type email here</string>
    <string name="typePassword">Type your password</string>
    <string name="loginClick">Login</string>
    <string name="your_profile">Your profile</string>
    <string name="your_name">Your name:</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="your_email">Your email:</string>
    <string name="enter_you_email">Enter your email</string>
    <string name="your_picture">Your picture:</string>
    <string name="click_button">Click the button above to take a picture</string>
    <string name="go_to_chat">Go to chat</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_confirm">Do you want to delete this?</string>
    <string name="receive_button">Receive</string>
    <string name="send_button">Send</string>
    <string name="go_to_weather">Go To Weather</string>
    <string name="go_to_toolbar">Go To Toolbar</string>
    <string name="bend">Bend It</string>
    <string name="plumb">Plumb It</string>
    <string name="overflow_toast">You clicked on the overflow menu</string>
    <string name="first_button_toast">You clicked item 1</string>
    <string name="second_button_toast">You clicked item 2</string>
    <string name="third_button_toast">You clicked item 3</string>
    <string name="back_to_login">Go back to login</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>