<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/profileTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_profile"/>

    <TextView
        android:id="@+id/nameTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_name" />

    <EditText
        android:id="@+id/EnterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/emailTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_email" />

    <EditText
        android:id="@+id/EnterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_you_email"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/pictureTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_picture" />

    <ImageButton
        android:id="@+id/imgBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/picture_frame" />

    <TextView
        android:id="@+id/ClickTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_button" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_chat"
        android:id="@+id/goToChatBtn"
        />
</LinearLayout>