<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lookGui"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="30dp"

        />

    <Button
        android:id="@+id/clickButton"
        android:layout_width="391dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:text="@string/clickHere"


        />

    <CheckBox
        android:id="@+id/checkThisOut"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="-5dp"
        android:layout_toRightOf="@+id/clickButton"
        android:text="@string/checkOut"
        android:textSize="30dp"/>

    <ImageButton
        android:id="@+id/imageFlag"
        android:layout_width="390dp"
        android:layout_height="277dp"
        android:layout_below="@id/clickButton"
        android:src="@drawable/flag"

        />

    <Switch
        android:id="@+id/switchOnOff"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkThisOut"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="1dp"
        android:layout_toRightOf="@id/imageFlag"
        android:text="@string/switchControl"
        android:textSize="30dp"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/typeHere"
        android:inputType="textPersonName|textCapWords"
        android:layout_below="@id/imageFlag"/>

</RelativeLayout>