<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:rowCount="4"
    android:columnCount="2"
    android:layout_weight="1"
    android:layout_gravity="fill"
    android:layout_columnSpan="1">


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:text="@string/lookGui"
        android:textSize="30sp" />

    <Button
        android:id="@+id/clickButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/clickHere" />

    <CheckBox
        android:id="@+id/checkThisOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkOut"
        android:textSize="30dp"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnWeight="1"/>
    <ImageButton
        android:id="@+id/imageFlag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/flag"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnWeight="1"
        />
    <Switch
        android:id="@+id/switchOnOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switchControl"
        android:textSize="30dp"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_columnWeight="1"
        />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/typeHere"
        android:inputType="textPersonName|textCapWords"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_columnSpan="2"/>

</GridLayout>