<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lookGui"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:id="@+id/clickButton"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/clickHere" />
            <CheckBox
                android:id="@+id/checkThisOut"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:text="@string/checkOut"
                android:textSize="30dp"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill"
        android:layout_weight="1"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/imageFlag"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/flag"
            />
        <Switch
            android:id="@+id/switchOnOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switchControl"
            android:layout_weight="1"
            android:textSize="30dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill"
        android:layout_weight="1"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/typeHere"
            android:inputType="textPersonName|textCapWords" />
    </LinearLayout>

</LinearLayout>